# WebDevelopmentProj2

./: .replit  LICENSE  README.md  app.py  database.db  pyproject.toml  requirements.txt
static/: service-worker.js
templates/: AccountDetails.html  delistproperty.html  enlistproperty.html  home1p.html  homep.html  loginp.html  mybookings.html
